--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ nav {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.is-active::after {
+.active::after {
   content: "";
   position: absolute;
   top: 76px;
@@ -169,6 +169,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 3000px;
   background-color: rgba(0, 0, 0, 0.2);
 }
 .window {
@@ -177,32 +178,16 @@ h1 {
   border-radius: 4px;
   background-color: var(--color-text-light);
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 50%;
   left: 50%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition-property: visibility, opacity, transform;
-  transition-duration: 250ms;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translate(-50%, -50%) rotate(360deg);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
   visibility: visible;
   display: block;
-  animation-name: modalscale;
-  animation-duration: 250ms;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-iteration-count: 1;
-}
-@keyframes modalscale {
-  0% {
-    scale: 0;
-  }
-  50% {
-    scale: 0.7;
-  }
-  100% {
-    scale: 1;
-  }
 }
 .sign-up-form {
   margin: 12px 40px 0 40px;
