--- a/css/styles.css
+++ b/css/styles.css
@@ -158,39 +158,38 @@ h1 {
   width: 200px;
   border-radius: 4px;
 }
-.is-hidden {
-  pointer-events: none;
-  visibility: hidden;
-  opacity: 0;
-  transform: translate(-50%, -50%) scale(0) skew(40deg, 40deg);
-}
-.backdrop {
-  position: absolute;
+.modal {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  min-height: 3000px;
-  background-color: rgba(0, 0, 0, 0.2);
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  opacity: 1;
+  visibility: visible;
+  transition-property: visibility, opacity, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal {
+.modal > .backdrop {
   height: 581px;
   width: 528px;
   border-radius: 4px;
   background-color: var(--color-text-light);
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 50%;
   left: 50%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition-property: visibility, opacity, transform;
-  transition-duration: 2s;
-  transform: translate(-50%, -50%) scale(1) skew(0deg, 0deg);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  display: block;
-  opacity: 1;
-  visibility: visible;
+  transform: translate(-50%, -50%);
+}
+.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  transform: rotate(90deg);
 }
 .sign-up-form {
   margin: 12px 40px 0 40px;
