--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ body {
 :root {
   --color-text-dark: rgb(33, 33, 33);
   --color-text-light: rgb(255, 255, 255);
-  --color-background-dark: #2f303a;
-  --color-mark: #2196f3;
+  --color-background-dark: rgb(47, 48, 58);
+  --color-mark: rgb(33, 150, 243);
 }
 ul {
   list-style-type: none;
@@ -18,7 +18,7 @@ h2 {
   text-align: center;
 }
 h3 {
-  color: rgba(33, 33, 33, 1);
+  color: var(--color-text-dark);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.17;
@@ -32,7 +32,7 @@ p {
   width: 1200px;
   margin: 0 215px;
 }
-.icon-contact {
+.contact__item {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -49,20 +49,20 @@ p {
   align-items: center;
   height: 80px;
 }
-.menu1 {
+.logo {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-nav {
+.navigation {
   margin-left: 93px;
 }
-.e-mail:hover,
-.e-mail:focus,
-.menu-nav:hover,
-.menu-nav:focus,
-.icon-contact:hover,
-.icon-contact:focus {
+.contact__link:hover,
+.contact__link:focus,
+.navigation__link:hover,
+.navigation__link:focus,
+.contact__item:hover,
+.contact__item:focus {
   fill: var(--color-mark);
   color: var(--color-mark);
 }
@@ -72,7 +72,7 @@ nav {
   border-radius: 4px;
   padding: 25px 100px;
 }
-.menu-nav {
+.navigation__link {
   font-size: 14px;
   font-weight: 500;
   text-decoration: none;
@@ -83,7 +83,7 @@ nav {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.active::after {
+.navigation__link--active::after {
   content: "";
   position: absolute;
   top: 76px;
@@ -92,21 +92,30 @@ nav {
   height: 4px;
   border-radius: 2px;
 }
-.logo {
+.logo__link {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
-  color: #000000;
   text-decoration: none;
 }
-.logo-web {
+.logo__link--header {
+  color: rgb(0, 0, 0);
+}
+.logo__link--footer {
+  color: var(--color-text-light);
+}
+.logo__text {
   color: var(--color-mark);
 }
 .main-header {
-  min-height: 80px;
-  border: 1px solid rgba(236, 236, 236, 1);
+  height: 80px;
+  border-bottom: 1px solid rgba(236, 236, 236, 1);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
-.main-menu {
+.navigation__list {
   display: flex;
   gap: 46px;
   flex-basis: calc((100%-2 * 46px) / 3);
@@ -116,7 +125,7 @@ nav {
   align-items: center;
   gap: 50px;
 }
-.e-mail {
+.contact__link {
   text-decoration: none;
   color: rgba(117, 117, 117, 1);
   transition-property: fill, color;
@@ -145,18 +154,20 @@ h1 {
   font-size: 44px;
   font-weight: 900;
 }
-.button-hw1 {
+.button {
   background-color: var(--color-mark);
   color: var(--color-text-light);
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+.button__motto {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.88;
-  cursor: pointer;
-  border: none;
   margin: 30px 500px 200px 500px;
   padding: 10px 41px;
   width: 200px;
-  border-radius: 4px;
 }
 .modal {
   background-color: rgba(0, 0, 0, 0.2);
@@ -189,32 +200,31 @@ h1 {
   pointer-events: none;
   visibility: hidden;
   opacity: 0;
-  transform: rotate(90deg);
 }
-.sign-up-form {
+.form__sign-up {
   margin: 12px 40px 0 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.form-label {
+.field__label {
   font-size: 12px;
   color: rgba(117, 117, 117, 1);
   position: relative;
 }
-.form-input {
+.field__input {
   width: 448px;
   min-height: 40px;
   padding-left: 42px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
-.form-input:focus {
+.field__input:focus {
   border-color: var(--color-mark);
   outline: none;
 }
-.form-caption {
+.form__title {
   display: block;
   margin-bottom: 12px;
   margin-top: 40px;
@@ -224,43 +234,41 @@ h1 {
   line-height: 1.17;
   color: var(--color-text-dark);
 }
-.form-label > .form-icon {
+.field__label > .field__icon {
   position: absolute;
   top: 50%;
   left: 15px;
   transform: translateY(50%);
 }
-.form-icon {
+.field__icon {
   display: inline-block;
 }
-.form-label:focus-within {
+.field__label:focus-within {
   fill: var(--color-mark);
 }
-.form-field {
+.form__field {
   transition-property: fill, color, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-field:not(:nth-child(4)) {
+.form__field {
   margin-bottom: 10px;
 }
-.form-field-agreement {
+.agreement {
+  margin-bottom: 30px;
+}
+.form__agreement {
   margin-top: 20px;
   margin-bottom: 30px;
   color: rgba(117, 117, 117, 1);
 }
-.statute {
+.agreement__label--statute {
   color: var(--color-mark);
   cursor: pointer;
 }
-.button-sign-up {
-  background-color: var(--color-mark);
+.agreement__button {
   padding: 10px 76px;
-  cursor: pointer;
-  border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  color: var(--color-text-light);
   font-size: 16px;
   font-weight: 700;
   line-height: 1.88;
@@ -268,19 +276,21 @@ h1 {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.comment {
+.field__input--comment {
   padding: 12px 16px;
   width: 448px;
   height: 120px;
   resize: none;
 }
-.check-input {
+.agreement__field {
   appearance: none;
 }
-.check-label {
+.agreement__label {
   position: relative;
+  color: rgba(117, 117, 117, 1);
+  font-size: 14px;
 }
-.check-label::before {
+.agreement__label::before {
   display: block;
   position: absolute;
   content: "";
@@ -291,7 +301,7 @@ h1 {
   top: 2px;
   left: -20px;
 }
-.check-input:checked + .check-label::before {
+.agreement__field:checked + .agreement__label::before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Crect width='16' height='15' fill='%232196F3' rx='2'/%3E%3Cpath fill='%23fff' stroke='%23fff' stroke-width='.2' d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z'/%3E%3C/svg%3E");
   background-position: center;
   border: none;
@@ -299,7 +309,7 @@ h1 {
 ::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.window-end {
+.modal__close-button {
   position: absolute;
   right: 0;
   width: 30px;
