--- a/css/styles.css
+++ b/css/styles.css
@@ -109,11 +109,13 @@ p {
 }
 .header {
   height: 80px;
-  border-bottom: 1px solid rgba(236, 236, 236, 1);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+.header-line {
+  border-bottom: 1px solid rgba(236, 236, 236, 1);
 }
 .navigation__list {
   display: flex;
